<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <include layout="@layout/common_toolbar_view" android:id="@+id/toolbar" />
    <LinearLayout
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/righttick_round_layout"
        android:layout_width="200dp"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/comera_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_check_black_24dp"/>
    </LinearLayout>

    <TextView
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/congratulation"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="10dp"
        android:text="@string/profile_done"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:padding="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/exit"
        android:layout_marginTop="100dp"
        android:background="@drawable/fb_login_border_color"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/exit_app"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>



</LinearLayout>