<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <include layout="@layout/common_toolbar_view"
        android:id="@+id/toolbar" />
    <TextView
        android:padding="10dp"
        android:text="@string/profile"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <FrameLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/upload_photo"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_gravity="center"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_user_placeholder"/>
        <LinearLayout
            android:layout_gravity="end|bottom"
            android:padding="7dp"
            android:background="@drawable/rounded_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/comera_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_add_a_photo_black_24dp"/>
        </LinearLayout>

    </FrameLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/gray"
            android:gravity="start|center_vertical"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/gray"
            android:gravity="start|center_vertical"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/userLicence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/gray"
            android:gravity="start|center_vertical"
            android:hint="@string/licence"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:padding="10dp"
        android:text="Gender"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@string/male" />
        <RadioButton android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="end"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/next"
        android:background="@drawable/rounded_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="end|bottom"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_chevron_right_black_24dp"/>
    </LinearLayout>


</LinearLayout>

